--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 # requirements.txt
-snowflake-connector-phyton
-cffi==1.33.0
+#snowflake-connector-phyton
+#cffi==1.33.0
+# requirements.txt
+snowflake-connector-python
+snowflake-snowpark-python
+streamlit==1.31.1
+requests
